--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-"name": "string-calculator",
+"name": "string-calculator-new",
 "version": "1.0.0",
-"description": "",
+"description": "First_Node_App",
 "main": "index.js",
 "scripts": {
 "test": "jest",
